modified:   Dockerfile.db 	modified:   Dockerfile.web 	modified:   docker-compose.yml 	modified:   web_conf/httpd.conf

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,7 +1,7 @@
 FROM centos:7
 WORKDIR /tmp
 RUN yum -y install \
-      httpd
+      httpd \
       perl \
       ImageMagick-perl \
       ImageMagick \
