--- a/web_conf/httpd.conf
+++ b/web_conf/httpd.conf
@@ -253,7 +253,7 @@ LogLevel warn
 # CGI directory exists, if you have that configured.
 #
 <Directory "/var/www/cgi-bin">
-    AllowOverride None
+    AllowOverride All
     Options None
     Require all granted
 </Directory>
