modified:   Dockerfile.db 	modified:   README.md 	modified:   db_conf/mt.cnf

--- a/db_conf/mt.cnf
+++ b/db_conf/mt.cnf
@@ -1,5 +1,7 @@
 [mysqld]
 character-set-server = utf8mb4
+collation_server=utf8mb4_unicode_ci
+
 log-error=/var/log/mysql/mysqld.log
 
 #slow_query_log
