--- a/web_conf/httpd.conf
+++ b/web_conf/httpd.conf
@@ -123,8 +123,7 @@ DocumentRoot "/var/www/html"
 #
 <Directory "/var/www">
     AllowOverride None
-    # Allow open access:
-    Require all granted
+    Require all denied
 </Directory>
 
 # Further relax access to the default document root:
@@ -148,7 +147,7 @@ DocumentRoot "/var/www/html"
     # It can be "All", "None", or any combination of the keywords:
     #   Options FileInfo AuthConfig Limit
     #
-    AllowOverride All
+    AllowOverride None
 
     #
     # Controls who can get stuff from this server.
@@ -161,7 +160,7 @@ DocumentRoot "/var/www/html"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html index.php
 </IfModule>
 
 #
@@ -253,7 +252,7 @@ LogLevel warn
 # CGI directory exists, if you have that configured.
 #
 <Directory "/var/www/cgi-bin">
-    AllowOverride All
+    AllowOverride None
     Options None
     Require all granted
 </Directory>
