--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     - ./web_conf/httpd.conf:/etc/httpd/conf/httpd.conf:ro
     - ./mt/:/var/www/cgi-bin/mt
     - ./html:/var/www/html
+    restart: always
   mt-db:
     build:
       context: .
@@ -24,3 +25,4 @@ services:
     - ./db_log:/var/log/mysql
     - ./db_conf/mt.cnf:/etc/mysql/conf.d/mt.cnf:ro
     - ./db_init:/docker-entrypoint-initdb.d:ro
+    restart: always
